# datamatrix-up

./: CMakeLists.txt  REQUIREMENTS
include/: datamatrix.hpp  main.hpp  server.hpp
src/: client.cpp  main.cpp  server.cpp
